# ChangeLog for x11-plugins/enigmail
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.167 2009/12/15 15:03:45 anarchy Exp $

  15 Dec 2009; Jory A. Pratt <anarchy@gentoo.org> enigmail-1.0.0.ebuild:
  update patchset for sparc users, bug #296883

*enigmail-1.0.0 (08 Dec 2009)

  08 Dec 2009; Jory A. Pratt <anarchy@gentoo.org> +enigmail-1.0.0.ebuild:
  revision bump for thunderbird

  25 Oct 2009; Jory A. Pratt <anarchy@gentoo.org> enigmail-0.96.0.ebuild:
  reverse preferred qt on pinetry

*enigmail-0.96.0 (25 Oct 2009)

  25 Oct 2009; Petteri Räty <betelgeuse@gentoo.org>
  +enigmail-0.96.0.ebuild:
  Version bump after testing as asked by Anarchy.

  29 Jun 2009; Raúl Porcel <armin76@gentoo.org> -enigmail-0.95.7-r4.ebuild,
  enigmail-0.95.7-r5.ebuild:
  alpha/ia64/sparc stable wrt #273918

  27 Jun 2009; Richard Freeman <rich0@gentoo.org> enigmail-0.95.7-r5.ebuild:
  amd64 stable - 273918

  27 Jun 2009; Brent Baude <ranger@gentoo.org> enigmail-0.95.7-r5.ebuild:
  Marking enigmail-0.95.7-r5 ppc64 and ppc for bug 273918

  25 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  enigmail-0.95.7-r5.ebuild:
  stable x86, security bug 273918

*enigmail-0.95.7-r5 (24 Jun 2009)

  24 Jun 2009; Raúl Porcel <armin76@gentoo.org> +enigmail-0.95.7-r5.ebuild:
  Revision bump

  22 Mar 2009; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.7-r4.ebuild:
  Bump patchset to fix #263215

  21 Mar 2009; Raúl Porcel <armin76@gentoo.org> -enigmail-0.95.7-r3.ebuild,
  enigmail-0.95.7-r4.ebuild:
  alpha/ia64/sparc stable, fix gcc check, bug #263152

  21 Mar 2009; Markus Meier <maekke@gentoo.org> enigmail-0.95.7-r4.ebuild:
  x86 stable, bug #261386

  20 Mar 2009; Tobias Heinlein <keytoaster@gentoo.org>
  enigmail-0.95.7-r4.ebuild:
  amd64 stable wrt security bug #261386

  20 Mar 2009; Brent Baude <ranger@gentoo.org> enigmail-0.95.7-r4.ebuild:
  Marking enigmail-0.95.7-r4 ppc64 and ppc for bug 261386
