@@ -47,14 +47,14 @@ DIST enigmail-0.96.0-tr-TR.xpi 32849 RMD160 2c66339b946f6b2796e8405cb83202006ef5
 DIST enigmail-0.96.0-zh-CN.xpi 34132 RMD160 6fe206a01e69f59a952d1bfc41f5c0fe922b454d SHA1 0983777d721bd2abecd5354efe6a5078625a67c1 SHA256 1041ba8ff8bd0b31b1609181a3075b09e01ffebed6f214d822cbbbf89acc0130
 DIST enigmail-0.96.0-zh-TW.xpi 34008 RMD160 25967e1d558ec7ab42dd2a13eeb6d6e12fc39056 SHA1 06367af7d537261153c8ed62dfe7c683aa66992a SHA256 6a83205b66474958b4a041b4345ff1601960202f0abe30132a74744a7083f8dd
 DIST enigmail-0.96.0.tar.gz 1231329 RMD160 62fc1f4d8c5a12ca0b2e49f2aa7ddd28361e736f SHA1 ad9a28ab632a5480bd138a0f60e43a5c07a56646 SHA256 80ad781236f43d9a291205eefd92cf49e75a5836826198f46d3cb90b7eae09d1
-DIST enigmail-1.0.0.tar.gz 1221348 RMD160 95ce3576033362de7ff3c82a15415e1275484c18 SHA1 22feb6e6cd592c4c67fd0d0b73ca6a340c3a09f2 SHA256 02469a399d1a06786151ef8a537ad21db37bbbeb5b3750c5edae6965f4b6339d
+DIST enigmail-1.0.1.tar.gz 1201945 RMD160 2abd8e70fcfcd2e75e71a97a5a3c7d1e0c292666 SHA1 334e70723fffc0631dadb6fd4449afffdeafc3f2 SHA256 7bc8541eef483d67246f3d83682ba13263f001fa94b5982c0cfbe54e5bdfd32a
 DIST mozilla-thunderbird-2.0.0.21-patches-0.1.tar.bz2 30712 RMD160 e0c49e24482c6193d1e74268cba80f1882900fe4 SHA1 3849c7f91ca5a7ebd8b3517f9fb0ceea69235faa SHA256 8cd124c154fc299f73bdb11c5a596d05651203cbe4472ceb2b1349a6b55b6ff1
 DIST mozilla-thunderbird-3.0-patches-0.3.tar.bz2 3241 RMD160 bc3b163b9c5bd7c7fb497786b2dc2da4e0a4bd28 SHA1 0182b73d48cd21204504f3bb8e17f0d9a7289464 SHA256 a430c71a12fe63662d43b4eeb5b185841a4788cbbbbd7178a3c73056ba94c5cd
 DIST thunderbird-2.0.0.22-source.tar.bz2 40489725 RMD160 6f9693c0b7f5af0c60d245c96492f11a4c286efd SHA1 a9da470ff090dfd049cae6b0c3b1a4e95c3f2022 SHA256 e364e5e1a96521b98b8391c5028207408d3d285ab40e091fa503b87a19d24d04
 DIST thunderbird-2.0.0.23-source.tar.bz2 38860245 RMD160 a1ef4af80121cdd8000c796e0c5fb575bea30348 SHA1 a237bfb92ec9c4b2bed7ea744e95d01ec43e07f1 SHA256 2c5007dfa1d094d8f089d42208e77d673e811a49980b7df77b04ed1606d30d21
-DIST thunderbird-3.0.source.tar.bz2 60022838 RMD160 bb2fb69319ec99da9fefe7fcf36456222050f4e5 SHA1 7a8a08f011901b4c0b737de2d7a226242935543d SHA256 750fc955e4474eef9ec36e8193df2811bcafb2b8cf27ecc0ebe65cec2eb33067
+DIST thunderbird-3.0.1.source.tar.bz2 59932577 RMD160 47058d3ce13287854a34a61ccaa1b4fcea667294 SHA1 0545a63a0b9015de166a323ae530745039ac9b93 SHA256 de53a892ffcad7217f17214c15709aba5ba3c5302939d122a28e2515768632af
 EBUILD enigmail-0.95.7-r5.ebuild 5987 RMD160 e278e86f9dcaefd64ecaa39143f33a22123c4a29 SHA1 b6788363c2bc5b1a5b22161f9e8ff4c406ab5556 SHA256 ed195e3269bd47457affe2c8c1d9d9a03901d58d7a746ae8c9b5dd85b4f7e961
 EBUILD enigmail-0.96.0.ebuild 5927 RMD160 93a70aa388a9524c202e0e5a4bff53453344b4ce SHA1 f7f0c0a16f0470c10c7727a171e78cacb638383e SHA256 c788966db20b62dced636ed4731c5f2ac3ff8c2168a7d5274400b04ac89c1317
-EBUILD enigmail-1.0.0.ebuild 3946 RMD160 6defd578745e17969a70d8c22c08eea0899d1316 SHA1 995a7fcab658f43bd9de7e1906623d38484e0877 SHA256 42520dee1bf3a47e164fb1afa78a865336c7941243a8a63115af0ba689e1ba81
-MISC ChangeLog 22913 RMD160 ca4c66cd1a3b734e4a355e096a897fea37e7a302 SHA1 1bbc0796e9a3faf0c2267f59102965617d1cfccc SHA256 5c97c35ceaaff6888716aa29fb70385275983e9c03d7dbde37f4fa47dbddb6d8
+EBUILD enigmail-1.0.1.ebuild 3988 RMD160 2e9f4728fa7825bfb3fce1469dbbb3af1eb17287 SHA1 77adcda7e0cc4460b5f9c1e15179ac0f2aadee6c SHA256 ed7c143fd243cf5a54eb52df65b2248ae87a65163d3fea899d47ea6684cb4ce5
+MISC ChangeLog 23086 RMD160 a185b39a6cbe235968b2025b72501c3ee184c6e4 SHA1 0f99712fef8e7abe71921d03307e89c44b28481e SHA256 703ea753a851c94f6f450e0b1039d659f6d4d1883ca81e2c76db87ce2c3cfaee
 MISC metadata.xml 318 RMD160 8cda6a5be4c149c167c99e720c42a29f0216ba06 SHA1 fe51e336b81760b99598eddbc0b098efac43ba6d SHA256 a24664782255a85ff233f6765450579b9e2a73f0e228cb7e3a346c82ea58874e
