@@ -1,6 +1,12 @@
 # ChangeLog for x11-plugins/enigmail
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.167 2009/12/15 15:03:45 anarchy Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.168 2010/02/05 12:43:42 anarchy Exp $
+
+*enigmail-1.0.1 (05 Feb 2010)
+
+  05 Feb 2010; <anarchy@gentoo.org> -enigmail-1.0.0.ebuild,
+  +enigmail-1.0.1.ebuild:
+  Version bump with bug fix for gpg-agent termination.
 
   15 Dec 2009; Jory A. Pratt <anarchy@gentoo.org> enigmail-1.0.0.ebuild:
   update patchset for sparc users, bug #296883
